--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
                 </h1>
                 <p>
                     I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    
                 </p>
+                <div class="btn-con">
+                    <a href="https://docs.google.com/document/d/14nHBk53iM1gVV0BxJyB074mMByR7DUK9/edit" class="main-btn p-2 g-col-6">
+                        <span class="btn-text">Resume</span>
+                    </a>
+                    &nbsp; &nbsp; &nbsp;
+                    <a href="https://drive.google.com/file/d/1rzGdDJ6clC9gLUfMCFo14wHO2GAm4_YN/view" class="main-btn p-2 g-col-6 ">
+                        <span class="btn-text">Video introduction</span>
+                    </a>
+                    
+                </div>
                 <div class="btn-con">
                     <a href="" class="main-btn">
                         <span class="btn-text">View Details</span>
